--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     //Gson converter
     implementation 'com.squareup.retrofit2:converter-gson:2.10.0'
+
+
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 }
